@@ -37,6 +37,8 @@ Release 0.1.0
   OPTIMIZATIONS
 
   BUG FIXES
+    HCAT-45. HCatalog release tar ball source code has problems (gates)
+
     HCAT-41. Changes to hcat.sh in HCATALOG-20 broke the -e option (gates)
 
     HCAT-7. Ivy fetch of CDH Hadoop versions does not work properly. (gates)
